deploy.yaml 내 get_url 단계 추가

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -19,16 +19,28 @@
         state: directory
         mode: '0755'
 
-    - name: 3. Nexus에서 파일 다운로드 및 압축 해제
-      unarchive:
-        # 다운로드할 전체 URL 조합
-        src: "{{ nexus_url }}/{{ artifact_path }}"
-        dest: /var/www/html/
-        remote_src: yes
-        # [중요] Nexus 로그인 정보 (젠킨스에서 전달받음)
+    - name: 3. Nexus에서 파일 다운로드
+      get_url:
+        url: "{{ nexus_url }}/{{ artifact_path }}"
+        dest: "{{ temp_file }}"
         url_username: "{{ nexus_user }}"
         url_password: "{{ nexus_pass }}"
-        # [중요] 압축 풀 때 최상위 'dist' 폴더 껍질을 벗겨냄
-        # 이걸 안 하면 /var/www/html/dist/index.html 이렇게 생겨버림
+        force: yes
+
+    - name: 4. 다운받은 파일 압축 해제
+      unarchive:
+        src: "{{ temp_file }}"
+        dest: /var/www/html/
+        remote_src: yes
         extra_opts:
           - --strip-components=1
+
+    # (선택) 깔끔하게 임시 파일 삭제
+    - name: 5. 임시 파일 삭제
+      file:
+        path: "{{ temp_file }}"
+        state: absent
+
+    - name: 6. 결과 확인
+      debug:
+        msg: "배포 완료! 버전 {{ build_number }}이(가) 설치되었습니다."
